--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.1.0",
+    "@react-navigation/material-top-tabs": "^5.3.10",
+    "@react-navigation/native": "^5.8.10",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-cli": "^4.0.7",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-tab-view": "^2.15.2",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0",
+    "redux": "^4.0.5",
     "styled-components": "5.2.0"
   },
   "devDependencies": {
