--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
+  "name": "pokedex",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/poppins": "^0.1.0",
-    "@react-navigation/material-top-tabs": "^5.3.10",
-    "@react-navigation/native": "^5.8.10",
-    "axios": "^0.21.0",
-    "expo": "~39.0.2",
-    "expo-cli": "^4.0.7",
-    "expo-font": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
-    "lodash": "^4.17.20",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-tab-view": "^2.15.2",
-    "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-router-native": "^5.2.0",
-    "redux": "^4.0.5",
-    "styled-components": "5.2.0"
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "add": "^2.0.6",
+    "axios": "^0.27.2",
+    "expo": "~46.0.13",
+    "expo-app-loading": "~2.1.0",
+    "expo-status-bar": "^1.4.0",
+    "lodash": "^4.17.21",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-pager-view": "5.4.24",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
+    "react-native-tab-view": "^3.2.1",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
+    "react-router-native": "^6.4.1",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
